--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lightdm (1.26.7.14-deepin9) stable; urgency=medium
+
+  * feat: whitebox scheme adjustment
+
+ -- bluesky <chenchongbiao@deepin.org>  Mon, 14 Aug 2023 10:46:35 +0800
+
 lightdm (1.26.7.14-deepin) stable; urgency=medium
 
   * ['Rebuild  against by  current gcc 11.2']
