--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lightdm (1.30.0-0deepin5) unstable; urgency=medium
+
+  * Restarting the service 5 seconds after lightdm exits on-failure
+
+ -- fuleyi <fuleyi@uniontech.com>  Tue, 01 Jul 2025 16:30:24 +0800
+
 lightdm (1.30.0-0deepin4) unstable; urgency=medium
 
   * feat: add dde quick login feature.
